--- a/index.html
+++ b/index.html
@@ -1,56 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Firebase CRUD</title>
 
-    <!-- BOOTSWATCH -->
-    <link
-      rel="stylesheet"
-      href="https://bootswatch.com/5/yeti/bootstrap.min.css"
-    />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Firebase CRUD</title>
 
-  <body class="bg-dark">
-    <!-- Afegir tasca -->
-    <div class="container p-4">
-      <div class="row">
-        <div class="col-md-6">
-          <div class="card">
-            <div class="card-body">
-              <h1 class="h4">Afegir tasca</h1>
+  <!-- BOOTSWATCH -->
+  <link rel="stylesheet" href="https://bootswatch.com/5/yeti/bootstrap.min.css" />
+</head>
 
-              <form id="task-form">
-                <label for="title">Titol:</label>
-                <input
-                  type="text"
-                  id="task-title"
-                  class="form-control mb-3"
-                  class="My First Title"
-                  placeholder="Titol de la tasca"
-                  autofocus
-                />
+<body class="bg-light">
 
-                <label for="description">Descripció:</label>
-                <textarea
-                  id="task-description"
-                  rows="3"
-                  class="form-control mb-3"
-                  placeholder="Descripció de la tasca"
-                ></textarea>
 
-                <button class="btn btn-primary" id="btn-task-form">Guarda</button>
-              </form>
-            </div>
-          </div>
+
+  <!-- Afegir metge -->
+  <div class="container p-4">
+    <div class="row">
+      <!-- INICI COLUMNA 1 >md 02 < -- > bloc control equerre -->
+      <div class="col-md-2" id="divPanellGestio">
+        <!-- INICI eleID_h4TitolPanell -->
+        <!-- <h4 class="text-center" id="h4TitolPanell">Panell de Gestió</h4> -->
+        <!-- FINAL eleID_h4TitolPanell -->
+        <div class="btn-group-vertical">
+          <button type="button" id="btnGestMetges" class="btn btn-primary btn-block" onclick="mostraGestioMetges()">Metges</button>
+          <button type="button" id="btnGestPacients" class="btn btn-primary btn-block">Pacients</button>
+          <button type="button" id="btnGestMalalties" class="btn btn-primary btn-block">Malalties</button>
+          <br>
+          <button type="button" id="btnGestAplicacio" class="btn btn-primary btn-block" onClick="mostraGestioApp()">Control</button>
         </div>
-        <!-- Tasks List -->
-        <div class="col-md-6" id="tasks-container"></div>
+        <!-- <button type="button" class="btn btn-primary  btn-block" data-toggle="modal" data-target="#espaiModal">Open modal</button> -->
       </div>
-    </div>
+      <!-- FINAL COLUMNA 1 >md 02 < -- > bloc control equerre -->
 
-    <!-- CUSTOM CODE -->
-    <script src="./index.js" type="module"></script>
-  </body>
+
+      <div class="col-md-6">
+        <div class="w-100 mx-auto align-items-center border mt-8 mb-8 p-4 rounded shadow bg-white" id="benvinguda">
+          <!-- mt margin top = 8    mt margin bottom = 8 -->
+          <h4 class="text-center mt-3 mb-3">Benvigut a l'aplicació de gestió Sanitària</h4>
+          <p>Amb els botons del panell lateral, podràs accedir a tots els menus!</p>
+        </div>
+
+        <div id="gestio-metges" class="card" style="border: solid 3px pink">
+          <div class="card-body" style="border: solid 1px red">
+            <!-- <h1 class="h4">Gestió de metges
+              <a href="#" class="close" data-dismiss="alert" aria-label="close" id="tancaDivMetges">
+                <h3>&times;</h3>
+              </a>
+            </h1> -->
+            <a href="#" class="close" data-dismiss="alert" aria-label="close" id="tancaDivMetges">
+              <h3>&times;</h3>
+            </a>
+            <h2 class="text-center">Gestió d'Treballadors</h2>
+
+            <form id="metge-form">
+              <label for="nom">Nom:</label>
+              <input type="text" id="metge-nom" class="form-control mb-3" placeholder="Nom del metge" autofocus />
+
+              <label for="cognom">Cognom:</label>
+              <input type="text" id="metge-cognom" class="form-control mb-3" placeholder="Cognom del metge" />
+              <label for="especialitat">Especialitat:</label>
+              <input id="metge-especialitat" class="form-control mb-3" placeholder="Especialitat del metge" />
+              <button class="btn btn-primary" id="btn-metge-form">Guarda</button>
+            </form>
+          </div>
+          <div class="col-md-6" id="llistat-metges"></div>
+        </div>
+      </div>
+      <!-- Llista de metges -->
+    </div>
+  </div>
+
+  <!-- CUSTOM CODE -->
+  <script src="./metges.js" type="module"></script>
+  <script src="./p.js" type="module"></script>
+  <script src="./gestio.js"></script>
+</body>
+
 </html>
