--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
   <!-- CUSTOM CODE -->
   <script src="./metges.js" type="module"></script>
-  <script src="./p.js" type="module"></script>
+  <!-- <script src="./pacients.js" type="module"></script> -->
   <script src="./gestio.js"></script>
 </body>
 
